src/test/resources/valid/ListUsage.vas
class Main is

    this() is
        main()
    end

    method main() is
        var n: Integer = 10
        var list: List[SomeStruct] = List[SomeStruct]()
        var el: Integer = 0
        println("Original list:")
        while el.less(n) loop
            println("$el")
            list.append(SomeStruct(el))
            el = el.plus(1)
        end
        mapIncr(list)
        println("Changed list:")
        printSomeStructList(list)
    end

    method mapIncr(list: List[SomeStruct]) is
        if list.isEmpty() then
            return
        end
        list.head().incrA()
        mapIncr(list.tail())
    end

    method printSomeStructList(list: List[SomeStruct]) is
        if list.isEmpty() then
            return
        end
        var a: Integer = list.head().a
        println("$a")
        printSomeStructList(list.tail())
    end
end


class SomeStruct is
    var a: Integer

    this(_a: Integer) is
        a = _a
    end

    method setA(_a: Integer) is
        a = _a
    end

    method incrA() is
        a = a.plus(1)
    end
end

