src/test/resources/invalid/notExhaustiveReturn/OnlyWhilereturn.vas
// https://rosettacode.org/wiki/Four_bit_adder#Kotlin

class Main is
    method foo() : Integer is
        var a : Integer = 0
        var b : Integer = 0
        var c : Integer = 1
        while a.Less(b) loop
            totalArea.Plus(shapes.head())
            shapes = shapes.tail()
            return c
        end
    end
end
